added images and their sources to README, also started added padding to created structure for header, hero, and infomration section

--- a/index.html
+++ b/index.html
@@ -10,29 +10,47 @@
 
 
     <div class="header">
-        <div class="logo">Header Logo</div>
+        <div class="logo">LATEOTH</div>
         <div class="header-links">
             <ul>
-                <li>Header Link One</li>
-                <li>Header Link Two</li>
-                <li>Header Link Three</li>
+                <li>Sun</li>
+                <li>Moon</li>
+                <li>Stars</li>
             </ul>
         </div>
     </div>
 
 
     <div class="hero-section">
-        <div class="large-hero-text">This Website is AWESONME</div>
-        <div class="small-hero-text">Subtext for big text</div>
-        <button class="sign-up">SIGN UP</button>
-
-        <img alt="image goes here">
+        <div class="hero-words">
+            <div class="large-hero-text">The Moths Were On To Something, I Tell Ya.</div>
+            <div class="small-hero-text">Maybe lamps were the real <s>lights</s> friends we made along the way</div>
+            <button class="sign-up">SIGN UP</button>
+        </div>
+        <img src="images/lighttunnelused.jpg" id="hero-image" alt="Image-of-tunnel-with-light-at-end">
     </div>
 
 
     <div class="information-section">
-        <div class="information-title">Some Random Inforamtion</div>
-        <div class="image-cards"></div>
+        <div class="information-title">July Lampshade Competition Winners</div>
+        <div class="image-cards">
+            <div class="card">
+                <img class="card-image" src="images/lamp1.jpg" alt="image of standard lampshade">
+                <div class="image-discription">Lovely Little Lampshade</div>
+            </div>
+            <div class="card">
+                <img class="card-image" src="images/lamp2.jpg" alt="image of street light turned to red">
+                <div class="image-discription">One On Every Street</div>
+            </div>
+            <div class="card">
+                <img class="card-image" src="images/lamp3.jpg" alt="golden glowing lamp from above with swirel effect">
+                <div class="image-discription">Giving Golden Hour</div>
+            </div>
+            <div class="card">
+                <img class="card-image" src="images/lamp4.jpg" alt="eletrical pole with old light">
+                <div class="image-discription">Absolute Classic</div>
+            </div>
+        </div>
     </div>
 
 
