finished the sign up banner section, finalized footer orientation, modified buttons, finished project for now

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
 
     <div class="call-to-action-section">
         <div class="action-banner">
+            <div class="banner-text">
+                <div id="banner-title" >Join the Light!</div>
+                <div>The next step is always brighter, as long as you are moving towards the light.</div>
+            </div>
+            
             <button class="sign-up">Sign Up</button>
         </div>
         
@@ -69,7 +74,7 @@
 
 
     <div class="footer">
-        Copyright C The Odin Project 2021
+        Copyright © The Odin Project 2021
     </div>
 </body>
 </html>
